syntax = "proto3";

package grpc;

// The service definition.
service Heartbeat {
  // Sends a greeting
  rpc UpHeartbeat (HeartbeatRequest) returns (HeartbeatReply) {}
}

// The request message
message HeartbeatRequest {
  string who = 1;
}

// The response message
message HeartbeatReply {
  string msg = 1;
}
